# solo-rpg-cli

./: .coverage  .gitignore  AGENTS.md  Makefile  README.md  pr_review.md  pyproject.toml  solo_rpg_cli.py  test.bat
doc/: developer_guide.md  user_guide.md
lib/: command.py  history.py  journal.py  journey.py  lexer.py  pretty.py  repl.py  state.py  table.py  variable.py
lib/commands/: journal_command.py  journey_command.py  macro_command.py  oracle_command.py  roll_command.py  summary_command.py  table_command.py  var_command.py
lib/core/: dice_roller.py  journey.py  music.py  settings.py  state.py  table.py
lib/infrastructure/: history.py  music_player.py
lib/macro/: __init__.py  evaluator.py  grammar.py  manager.py  models.py
lib/presentation/: command.py  completer.py  console.py  lexer.py  pretty.py  repl.py
lib/pretty_printers/: diceroll_printer.py  journal_printer.py  journey_printer.py  summary_printer.py
scripts/: post_plan.sh
tables/: celtic_names.txt  latin_names.txt  oe_names.txt
test/features/: cli_init.feature  dice_roller.feature  history.feature  journal_command.feature  journey_command.feature  macro_system.feature  music.feature  oracle_command.feature  roll_command.feature  summary_command.feature  table_command.feature  tables.feature  var_command.feature
test/unit/: test_autocomplete_integration.py  test_completer.py  test_evaluator.py  test_journal.py  test_journey.py  test_journey_command.py  test_macros.py  test_music_command.py  test_music_manager.py  test_oracle_command.py  test_repl.py  test_settings.py  test_table.py  (+3 more)
(+27 files in other folders)
