[project]
name = "solo-rpg-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "prompt-toolkit>=3.0.52",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 88
[tool.ruff.format]
docstring-code-format = true
[tool.ruff.lint]
select = ["E", "F", "I", "B"] # Examples: PEP8, Pyflakes, isort, Bugbear
