[project]
name = "solo-rpg-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "parsimonious>=0.11.0",
    "prompt-toolkit>=3.0",
    "pygame>=2.5.0",
    "rich>=14.3.3",
]

[dependency-groups]
dev = [
    "behave>=1.3.3",
    "mypy>=1.19.1",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.15.4",
]

[tool.ruff]
line-length = 88
[tool.ruff.format]
docstring-code-format = true
[tool.ruff.lint]
select = ["E", "F", "I", "B"] # Examples: PEP8, Pyflakes, isort, Bugbear

[tool.mypy]
explicit_package_bases = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
pythonpath = "."
